--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recurring Interface</title>
+    <title>Recurring Billing UI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+    <div class="bg-white p-6 rounded-2xl shadow-xl max-w-md w-full">
+        <h2 class="text-2xl font-bold mb-4 text-center">Subscribe to a plan</h2>
+
+        <label class="block mb-2 font-medium">Email:</label>
+        <input type="email" id="email" class="w-full p-2 border rounded mb-4" placeholder="you@example.com">
+
+        <label class="block mb-2 font-medium">Choose a Plane:</label>
+        <select class="w-full p-2 border rounded mb-4" id="plan">
+            <option value="basic">Basic - $5/month</option>
+            <option value="pro">Pro - $15/month</option>
+            <option value="premium">Premium - $30/month</option>
+        </select>
+
+        <button onclick="startSubscription()" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Start Subscription</button>
+
+        <div id="confirmation" class="mt-4 text-green-600 font-semibold hidden"></div>
+       <script>
+        function startSubscription(){
+            const email = document.getElementById("email").value;
+            const plan = document.getElementById("plan").value;
+            const confirmation = document.getElementById("confirmation");
+
+            if(!email){
+                alert("Please enter your email.");
+                return;
+            }
+
+            confirmation.innerText = ` Subscription started for ${email} on the ${plan.toUpperCase()} plan.`;
+            confirmation.classList.remove("hidden");
+        }
+       </script> 
+    </div>
 </body>
 </html>
